# shade-tree

./: .gitignore  Cargo.toml  README.md  TODO
src/: bin.rs  camera.rs  lib.rs  material.rs  ray.rs  sphere.rs  vec.rs  visible.rs  world.rs
