[package]
name = "shade-tree"
version = "0.1.0"
authors = ["Luis de Bethencourt <luisbg@debethencourt.com>"]
edition = "2018"

[lib]
name = "shade_tree"
path = "src/lib.rs"

[[bin]]
name = "shady"
path = "src/bin.rs"

[dependencies]
minifb = "0.12"
rand = "0.7.0"
rayon = "1.1.0"
indicatif = "0.11.0"
png = "0.15.0"
